<resources>

    <string name="app_name">JustJava0</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:</string>
    <string name="order_summary_whipped_cream">Add whipped cream?</string>
    <string name="order_summary_chocolate">Add chocolate? </string>
    <string name="order_summary_quantity">Quantity: </string>
    <string name="order_summary_price">Total:</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_email_subject">Just Java order for </string>
    <string name="order_summary">Order Summary</string>

</resources>
