<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/button2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:shadowColor="#000"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_margin="0dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee" />

         <!-- @Inputed Name-->

        <EditText
            android:maxLines="2"
            android:maxLength="25"
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginBottom="10dp"
            android:inputType="textCapWords" />

        <!--<android.support.v7.widget.CardView-->
            <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--card_view:cardElevation="4dp"-->
            <!--card_view:cardCornerRadius="4dp">-->

        <TextView
            android:layout_gravity="center"
            android:id="@+id/toppingTxt"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:shadowColor="#000"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="24sp" />


        <CheckBox
            android:layout_gravity="center"
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:layout_gravity="center"
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />



        <!--</android.support.v7.widget.CardView>-->

        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000" />

        <TextView
            android:id="@+id/Quantity"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:shadowColor="#000"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="24sp" />



        <LinearLayout
            android:layout_gravity="center"
            android:background="@drawable/bgv"
            android:shadowColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/decrement_l"
                android:onClick="decrement"
                android:text="-"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/initial_quantity_value"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:background="@drawable/increment_r"
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="increment"
                android:text="+"
                android:layout_marginBottom="15dp"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000" />


        <TextView
            android:layout_gravity="center"
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:shadowColor="#000"
            android:text="Summary"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="24sp" />




        <TextView
            android:layout_gravity="center"
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text=""
            android:hint="..summary to appear here"
            android:textStyle="bold|italic"
            android:textColor="#54bd71"
            android:textSize="24sp" />

        <LinearLayout
            android:shadowColor="#000000"
            android:background="@drawable/bgv"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:alpha="0.9"
                android:background="@drawable/rounded_green"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="#fff"
                android:textSize="24sp" />



            <Button
                android:layout_marginBottom="20dp"
                android:layout_margin="10dp"
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_blue"
                android:onClick="resetOrder"
                android:text="reset"
                android:alpha="0.9"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
